# DEVVONDRART

./: .env.example  .gitignore  CLAUDE.md  NAVOD.md  README.md  main.py  pyproject.toml  vondrart-leads-SPEC.md
.github/workflows/: daily.yml
config/: profile.md  targets.yaml
data/: .gitkeep
src/: __init__.py  config.py  models.py  notify.py  scoring.py  storage.py
src/sources/: __init__.py  ares.py  base.py  webtrh.py
templates/: digest.html.j2
tests/: test_ares.py  test_notify.py  test_pipeline.py  test_scoring.py  test_storage.py  test_webtrh.py
